# japanese-TTS

./: README.md
testing/: Cargo.toml  query.json
testing/src/: main.rs
zundamon/: Cargo.toml  query.json  text.txt
zundamon/src/: File.rs  Fileing.rs  VoicevoxRequest.rs  VoicevoxRequestAudio.rs  VoicevoxRequestJson.rs  VoicevoxResponse.rs  Windows.rs  fileing.rs  main.rs  testcode.txt  voicevox_request.rs  windows.rs
zundamon/src/temp/: VoicevoxRequest.rs  VoicevoxRequest2.rs  VoicevoxRequest3.rs
