[package]
name = "zundamon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "5.0.0"
reqwest = {version="0.11.22", features=["blocking"]}
tokio = "1.35.0"
voicevox-client = "0.1.1"
serde_urlencoded = "0.7.1"
ctrlc = "3.3.0"